syntax = "proto3";
package server_side_streaming;

service ServerStream {
    rpc ReceiveMessage (User) returns (stream Message);
    rpc SendMessage (Message) returns (Empty);
}

message Message {
    string id = 1;
    string to = 2;
    string content = 3;
    int32 ttl = 4;
}

message User {
    string id = 1;
    string name = 2;
}

message Empty {}
